--- a/Myplace.html
+++ b/Myplace.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8"> <!-- Permitir utilizar caracter especial como 'ç'-->
-    <title>My Place</title>
+    <title>Vale Imobilária</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -14,13 +14,14 @@
 </head>
 
 
+
 <body>
     <header>
         <!-- Início do menu -->
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container">
                 <nav class="navbar navbar-expand-lg navbar-re bg-red">
-                    <img src="img/VALE IMOBILIÁ.png" alt="Catatau Games" width="200" height="120">
+                    <img src="IMG/VALE IMOBILIÁ.png" alt="" width="200" height="180">
                 </nav>
                 <a class="navbar-brand" href="index.html">Vale Imobilária</a>
                 <!--Button-->
@@ -123,22 +124,6 @@
         <section id="produtos" class="container">
             <h2 class="text-center mb-4 title-site">My place</h2>
 
-            <div class="row row-cols-1 row-cols-md-3 g-4">
-                <div class="col">
-                    <div class="card">
-                        <img src="IMG/mY PLACE.png" class="card-img-top" alt="..." width="100%" height="360rem">
-                        <div class="card-body">
-                            <h5 class="card-title">My Place</h5>
-                            <p class="card-text"></i><b>Gov. Valadares</b></p>
-                            <p class="card-text">Em frente ao Gv Shopping
-                            <p class="card-text">2 Quartos</p>
-                            <p class="card-text">A partir de R$ 576 mil</p>
-                            <a class="btn btn-light" href="#" role="button">Veja mais</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
             <div id="carouselExampleIndicators" class="carousel slide">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
@@ -165,53 +150,51 @@
                         aria-label="Slide 11"></button>
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="11"
                         aria-label="Slide 12"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="12"
+                        aria-label="Slide 13"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="13"
+                        aria-label="Slide 14"></button>
                 </div>
 
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="..." class="d-block w-100" alt="IMG/mp01">
+                        <img src="IMG/mp01.png" class="d-block w-100" alt="IMG/mp01">
                     </div>
                     <div class="carousel-item">
-                        <img src="..." class="d-block w-100" alt="...">
+                        <img src="IMG/mp02.png" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="..." class="d-block w-100" alt="...">
+                        <img src="IMG/mp03.png" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="..." class="d-block w-100" alt="...">
+                        <img src="IMG/mp04.png" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="..." class="d-block w-100" alt="...">
+                        <img src="IMG/mp05.png" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="..." class="d-block w-100" alt="...">
+                        <img src="IMG/mp06.png" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="..." class="d-block w-100" alt="...">
+                        <img src="IMG/mp07.png" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="..." class="d-block w-100" alt="...">
+                        <img src="IMG/mp08.png" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="..." class="d-block w-100" alt="...">
+                        <img src="IMG/mp09.png" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="..." class="d-block w-100" alt="...">
+                        <img src="IMG/mp10.png" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="..." class="d-block w-100" alt="...">
+                        <img src="IMG/mp11.png" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="..." class="d-block w-100" alt="...">
+                        <img src="IMG/mp12.png" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="..." class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="..." class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="..." class="d-block w-100" alt="...">
+                        <img src="IMG/mp13.png" class="d-block w-100" alt="...">
                     </div>
                 </div>
 
@@ -228,6 +211,8 @@
             </div>
 
         </section>
+
+        
     </main>
 
 
