--- a/CONSTRUÇÃO.HTML
+++ b/CONSTRUÇÃO.HTML
@@ -185,7 +185,7 @@
   <footer>
     <!-- Rodapé -->
 
-    <p>&copy; 2024 Vale Imobiliária</p>
+    <p class="text-center"> &copy;  2024 Vale Imobiliária</p>
 
   </footer>
 
