--- a/Absoluto.html
+++ b/Absoluto.html
@@ -23,7 +23,7 @@
                 <nav class="navbar navbar-expand-lg navbar-re bg-red">
                     <img src="IMG/VALE IMOBILIÁ.png" alt="" width="200" height="180">
                 </nav>
-                <a class="navbar-brand" href="index.html">Vale Imobilária</a>
+                <a class="navbar-brand" href="Intex.html">Vale Imobilária</a>
                 <!--Button-->
                 <!-- Button para alternar o menu em dispositivos móveis -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -147,6 +147,11 @@
                     <span class="visually-hidden">Next</span>
                 </button>
             </div>
+            3 e 4 Suítes em Valadares
+Descrição do imóvel
+O novo ícone de sofisticação na melhor localização da cidade, com 25 andares e de frente para a Ibituruna.
+
+Para saber mais sobre este empreendimento entre em contato agora com nossos corretores.
 
             <p class="card-text">Se interesse</p>
             <div class="mb-3">
@@ -169,8 +174,8 @@
 
 
     <footer>
-
-        <p>&copy; 2024 Vale Imobiliária</p>
+        
+        <p class="text-center"> &copy;  2024 Vale Imobiliária</p>
 
     </footer>
 
