--- a/Altavista.html
+++ b/Altavista.html
@@ -175,7 +175,7 @@
 
     <footer>
 
-        <p>&copy; 2024 Vale Imobiliária</p>
+        <p class="text-center"> &copy;  2024 Vale Imobiliária</p>
 
     </footer>
 
