--- a/COMERCIAL.HTML
+++ b/COMERCIAL.HTML
@@ -111,7 +111,7 @@
           </ul>
         </div>
       </div>
-    </nav>                    <!-- Fim do menu -->
+    </nav> <!-- Fim do menu -->
   </header>
 
 
@@ -119,9 +119,99 @@
 
     <section id="produtos" class="container">
       <h2 class="text-center mb-4 title-site">COMERCIAL</h2>
-    
+
       <div class="row row-cols-1 row-cols-md-3 g-4">
-        
+        <div class="col">
+          <div class="card">
+            <img src="img/THE OFFICE.png" class="card-img-top" alt="..." width="100%" height="400rem">
+            <div class="card-body">
+              <h5 class="card-title">The Office</h5>
+              <p class="card-text"></i><b>Ipatinga</b></p>
+              <p class="card-text"><b><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                    class="bi bi-pin-map-fill" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd"
+                      d="M3.1 11.2a.5.5 0 0 1 .4-.2H6a.5.5 0 0 1 0 1H3.75L1.5 15h13l-2.25-3H10a.5.5 0 0 1 0-1h2.5a.5.5 0 0 1 .4.2l3 4a.5.5 0 0 1-.4.8H.5a.5.5 0 0 1-.4-.8z" />
+                    <path fill-rule="evenodd"
+                      d="M4 4a4 4 0 1 1 4.5 3.969V13.5a.5.5 0 0 1-1 0V7.97A4 4 0 0 1 4 3.999z" />
+                  </svg>Horto</b></p>
+              <p class="card-text"><i class="bi bi-arrows-fullscreen"></i> Salas até 28m²</p>
+              <p class="card-text"><i class="bi bi-coin"></i> Unidades disponíveis</p>
+              <a class="btn btn-light" href="TheOffice.html" role="button">Veja mais</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="img/The One.png" class="card-img-top" alt="..." width="100%" height="400rem">
+            <div class="card-body">
+              <h5 class="card-title">The One</h5>
+              <p class="card-text"><b>Ipatinga</b></p>
+              <p class="card-text"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                  class="bi bi-pin-map-fill" viewBox="0 0 16 16">
+                  <path fill-rule="evenodd"
+                    d="M3.1 11.2a.5.5 0 0 1 .4-.2H6a.5.5 0 0 1 0 1H3.75L1.5 15h13l-2.25-3H10a.5.5 0 0 1 0-1h2.5a.5.5 0 0 1 .4.2l3 4a.5.5 0 0 1-.4.8H.5a.5.5 0 0 1-.4-.8z" />
+                  <path fill-rule="evenodd" d="M4 4a4 4 0 1 1 4.5 3.969V13.5a.5.5 0 0 1-1 0V7.97A4 4 0 0 1 4 3.999z" />
+                </svg><b>Horto</b></p>
+              <p class="card-text"><i class="bi bi-arrows-fullscreen"></i> Salas até 39m²</p>
+              <p class="card-text"><i class="bi bi-key"></i></i> Entregue em 2021</p>
+              <a class="btn btn-light" href="Lumière.html" role="button">Veja mais</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="img/The Place.png" class="card-img-top" alt="..." width="100%" height="400rem">
+            <div class="card-body">
+              <h5 class="card-title">The Place</h5>
+              <p class="card-text"><b>Ipatinga</b></p>
+              <p class="card-text"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                  class="bi bi-pin-map-fill" viewBox="0 0 16 16">
+                  <path fill-rule="evenodd"
+                    d="M3.1 11.2a.5.5 0 0 1 .4-.2H6a.5.5 0 0 1 0 1H3.75L1.5 15h13l-2.25-3H10a.5.5 0 0 1 0-1h2.5a.5.5 0 0 1 .4.2l3 4a.5.5 0 0 1-.4.8H.5a.5.5 0 0 1-.4-.8z" />
+                  <path fill-rule="evenodd" d="M4 4a4 4 0 1 1 4.5 3.969V13.5a.5.5 0 0 1-1 0V7.97A4 4 0 0 1 4 3.999z" />
+                </svg><b>Horto</b></p>
+              <p class="card-text"><i class="bi bi-arrows-fullscreen"></i> Salas até 24m²</p>
+              <p class="card-text"><i class="bi bi-key"></i></i> Entregue em 2017</p>
+              <a class="btn btn-light" href="ThePlace.html" role="button">Veja mais</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="img/Horto Office.png" class="card-img-top" alt="..." width="100%" height="400rem">
+            <div class="card-body">
+              <h5 class="card-title">Horto Office</h5>
+              <p class="card-text"><b>Ipatinga</b></p>
+              <p class="card-text"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                  class="bi bi-pin-map-fill" viewBox="0 0 16 16">
+                  <path fill-rule="evenodd"
+                    d="M3.1 11.2a.5.5 0 0 1 .4-.2H6a.5.5 0 0 1 0 1H3.75L1.5 15h13l-2.25-3H10a.5.5 0 0 1 0-1h2.5a.5.5 0 0 1 .4.2l3 4a.5.5 0 0 1-.4.8H.5a.5.5 0 0 1-.4-.8z" />
+                  <path fill-rule="evenodd" d="M4 4a4 4 0 1 1 4.5 3.969V13.5a.5.5 0 0 1-1 0V7.97A4 4 0 0 1 4 3.999z" />
+                </svg><b>Horto</b></p>
+              <p class="card-text"><i class="bi bi-arrows-fullscreen"></i> Salas até 65m²</p>
+              <p class="card-text"><i class="bi bi-key"></i></i> Entregue em 2015</p>
+              <a class="btn btn-light" href="ThePlace.html" role="button">Veja mais</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="img/LIFE.png" class="card-img-top" alt="..." width="100%" height="400rem">
+            <div class="card-body">
+              <h5 class="card-title">Life</h5>
+              <p class="card-text"><b>Ipatinga</b></p>
+              <p class="card-text"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                  class="bi bi-pin-map-fill" viewBox="0 0 16 16">
+                  <path fill-rule="evenodd"
+                    d="M3.1 11.2a.5.5 0 0 1 .4-.2H6a.5.5 0 0 1 0 1H3.75L1.5 15h13l-2.25-3H10a.5.5 0 0 1 0-1h2.5a.5.5 0 0 1 .4.2l3 4a.5.5 0 0 1-.4.8H.5a.5.5 0 0 1-.4-.8z" />
+                  <path fill-rule="evenodd" d="M4 4a4 4 0 1 1 4.5 3.969V13.5a.5.5 0 0 1-1 0V7.97A4 4 0 0 1 4 3.999z" />
+                </svg><b>Horto</b></p>
+              <p class="card-text"><i class="bi bi-arrows-fullscreen"></i> Salas até 28m²</p>
+              <p class="card-text"><i class="bi bi-coin"></i> Unidades disponíveis</p>
+              <a class="btn btn-light" href="Life.html" role="button">Veja mais</a>
+            </div>
+          </div>
+        </div>
 
 
 
@@ -133,11 +223,11 @@
   <footer>
     <!-- Rodapé -->
 
-    <p>&copy; 2024 Vale Imobiliária</p>
+    <p class="text-center"> &copy;  2024 Vale Imobiliária</p>
 
-</footer>
+  </footer>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
 </body>
