--- a/HortoOffice.html
+++ b/HortoOffice.html
@@ -172,7 +172,7 @@
 
     <footer>
 
-        <p>&copy; 2024 Vale Imobiliária</p>
+        <p class="text-center"> &copy;  2024 Vale Imobiliária</p>
 
     </footer>
 
