--- a/Intex.html
+++ b/Intex.html
@@ -164,7 +164,7 @@
     <footer>
         <!-- Rodapé -->
 
-        <p>&copy; 2024 Vale Imobiliária</p>
+        <p class="text-center"> &copy;  2024 Vale Imobiliária</p>
 
     </footer>
 
