--- a/Myplace.html
+++ b/Myplace.html
@@ -232,7 +232,7 @@
 
     <footer>
 
-        <p>&copy; 2024 Catatau Games. Feito por Vitória e Sandyla.</p>
+        <p class="text-center"> &copy;  2024 Vale Imobiliária</p>
 
     </footer>
 
