--- a/On.html
+++ b/On.html
@@ -207,7 +207,7 @@
 
     <footer>
 
-        <p>&copy; 2024 Vale Imobiliária</p>
+        <p class="text-center"> &copy;  2024 Vale Imobiliária</p>
 
     </footer>
 
