--- a/Absoluto.html
+++ b/Absoluto.html
@@ -147,13 +147,12 @@
                     <span class="visually-hidden">Next</span>
                 </button>
             </div>
-            3 e 4 Suítes em Valadares
-Descrição do imóvel
-O novo ícone de sofisticação na melhor localização da cidade, com 25 andares e de frente para a Ibituruna.
 
-Para saber mais sobre este empreendimento entre em contato agora com nossos corretores.
-
-            <p class="card-text">Se interesse</p>
+            <p class="fs-5"><b>3 e 4 Suítes em Valadares</b></p>
+            <p class="fw-bold">Descrição do imóvel</p>
+            <p class="card-text">O novo ícone de sofisticação na melhor localização da cidade, com 25 andares e de frente para a Ibituruna..</p>
+            <p class="text-success"><b>Para saber mais sobre este empreendimento entre em contato agora com nossos
+                    corretores.</b></p>
             <div class="mb-3">
                 <label for="exampleFormControlInput1" class="form-label">Email</label>
                 <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="nome@exemplo.com">
@@ -174,8 +173,8 @@ Para saber mais sobre este empreendimento entre em contato agora com nossos corr
 
 
     <footer>
-        
-        <p class="text-center"> &copy;  2024 Vale Imobiliária</p>
+
+        <p class="text-center"> &copy; 2024 Vale Imobiliária</p>
 
     </footer>
 
