--- a/IbiturunaTower.html
+++ b/IbiturunaTower.html
@@ -150,7 +150,13 @@
                 </button>
             </div>
 
-            <p class="card-text">Se interesse</p>
+            <p class="fs-5"><b>O primeiro Vale Imobiliária em Valadares</b></p>
+            <p class="fw-bold">Descrição do imóvel</p>
+            <p class="card-text">Para saber mais sobre este empreendimento entre em contato agora com nossos
+                corretores.
+            </p>
+            <p class="text-success"><b>Para saber mais sobre este empreendimento entre em contato agora com nossos
+                    corretores.</b></p>
             <div class="mb-3">
                 <label for="exampleFormControlInput1" class="form-label">Email</label>
                 <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="nome@exemplo.com">
@@ -172,7 +178,7 @@
 
     <footer>
 
-        <p class="text-center"> &copy;  2024 Vale Imobiliária</p>
+        <p class="text-center"> &copy; 2024 Vale Imobiliária</p>
 
     </footer>
 
