--- a/IguacuNobre.html
+++ b/IguacuNobre.html
@@ -183,7 +183,13 @@
                 </button>
             </div>
 
-            <p class="card-text">Se interesse</p>
+            <p class="fs-5"><b>2 torres de 25 andares</b></p>
+            <p class="fw-bold">Descrição do imóvel</p>
+            <p class="card-text">Um empreendimento planejado para a comodidade da sua família.
+                O conforto de morar no Iguaçu, com os privilégios do Cidade Nobre.
+                Espaço gourmet, academia, hall decorado e a elegância do Padrão do Vale Imobiliária.</p>
+            <p class="text-success"><b>Para saber mais sobre este empreendimento entre em contato agora com nossos
+                    corretores.</b></p>
             <div class="mb-3">
                 <label for="exampleFormControlInput1" class="form-label">Email</label>
                 <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="nome@exemplo.com">
