--- a/LaVille.html
+++ b/LaVille.html
@@ -190,7 +190,13 @@
                 </button>
             </div>
 
-            <p class="card-text">Se interesse</p>
+            <p class="fs-5"><b>Em frente ao GV Shopping</b></p>
+            <p class="fw-bold">Descrição do imóvel</p>
+            <p class="card-text">O LaVille te coloca na área central da cidade, próxima a três rodovias, hotéis,
+                hospitais e clínicas. Além da praticidade de viver em frente ao GV Shopping.
+            </p>
+            <p class="text-success"><b>Para saber mais sobre este empreendimento entre em contato agora com nossos
+                    corretores.</b></p>
             <div class="mb-3">
                 <label for="exampleFormControlInput1" class="form-label">Email</label>
                 <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="nome@exemplo.com">
@@ -212,7 +218,7 @@
 
     <footer>
 
-        <p class="text-center"> &copy;  2024 Vale Imobiliária</p>
+        <p class="text-center"> &copy; 2024 Vale Imobiliária</p>
 
     </footer>
 
