--- a/LaVista.html
+++ b/LaVista.html
@@ -225,7 +225,13 @@
                 </button>
             </div>
 
-            <p class="card-text">Se interesse</p>
+            <p class="fs-5"><b>25 andares na Av. Brasil</b></p>
+            <p class="fw-bold">Descrição do imóvel</p>
+            <p class="card-text">28 pavimentos de frente para o Pico da Ibituruna, o La Vista foi pensado com todo o
+                cuidado e capricho, aplicados em cada detalhe. Um conceito único para quem deseja morar com total
+                conforto ou fazer um excelente investimento.</p>
+            <p class="text-success"><b>Para saber mais sobre este empreendimento entre em contato agora com nossos
+                    corretores.</b></p>
             <div class="mb-3">
                 <label for="exampleFormControlInput1" class="form-label">Email</label>
                 <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="nome@exemplo.com">
@@ -247,7 +253,7 @@
 
     <footer>
 
-        <p class="text-center"> &copy;  2024 Vale Imobiliária</p>
+        <p class="text-center"> &copy; 2024 Vale Imobiliária</p>
 
     </footer>
 
