--- a/Life.html
+++ b/Life.html
@@ -188,7 +188,14 @@
                 </button>
             </div>
 
-            <p class="card-text">Se interesse</p>
+            <p class="fs-5"><b>Salas comerciais no Horto</b></p>
+            <p class="fw-bold">Descrição do imóvel</p>
+            <p class="card-text">LIFE, salas comerciais no bairro Horto, para você que valoriza seu tempo e, sobretudo,
+                qualidade de vida. Uma excelente investimento que combina a exclusividade da melhor localização
+                comercial da cidade com o conforto e a praticidade de um bairro com comércio forte e suas comodidades.
+            </p>
+            <p class="text-success"><b>Para saber mais sobre este empreendimento entre em contato agora com nossos
+                    corretores.</b></p>
             <div class="mb-3">
                 <label for="exampleFormControlInput1" class="form-label">Email</label>
                 <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="nome@exemplo.com">
@@ -210,7 +217,7 @@
 
     <footer>
 
-        <p class="text-center"> &copy;  2024 Vale Imobiliária</p>
+        <p class="text-center"> &copy; 2024 Vale Imobiliária</p>
 
     </footer>
 
