--- a/Myplace.html
+++ b/Myplace.html
@@ -210,7 +210,14 @@
                 </button>
             </div>
 
-            <p class="card-text">Se interesse</p>
+            <p class="fs-5"><b>Duas suítes em frente ao GV Shopping</b></p>
+            <p class="fw-bold">Descrição do imóvel</p>
+            <p class="card-text">Localizado em frente ao GV Shopping, este empreendimento oferece rápida movimentação
+                urbana e alta valorização de mercado. Excelente para quem busca dinamismo, conforto e conexões com a
+                cidade.
+            </p>
+            <p class="text-success"><b>Para saber mais sobre este empreendimento entre em contato agora com nossos
+                    corretores.</b></p>
             <div class="mb-3">
                 <label for="exampleFormControlInput1" class="form-label">Email</label>
                 <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="nome@exemplo.com">
@@ -218,13 +225,13 @@
             <div class="mb-3">
                 <label for="exampleFormControlTextarea1" class="form-label">Texto</label>
                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                
+
             </div>
             <button type="button" class="btn btn-primary">Enviar</button>
 
         </section>
 
-        
+
 
 
     </main>
@@ -232,7 +239,7 @@
 
     <footer>
 
-        <p class="text-center"> &copy;  2024 Vale Imobiliária</p>
+        <p class="text-center"> &copy; 2024 Vale Imobiliária</p>
 
     </footer>
 
