--- a/On.html
+++ b/On.html
@@ -185,7 +185,13 @@
                 </button>
             </div>
 
-            <p class="card-text">Se interesse</p>
+            <p class="fs-5"><b>20 andares no Horto</b></p>
+            <p class="fw-bold">Descrição do imóvel</p>
+            <p class="card-text">Seja para morar seja para investir, o ON combina o que é essencial para se morar bem
+                com conforto, praticidade e qualidade de vida, na melhor localização do bairro mais valorizado da cidade
+                – o HORTO!</p>
+            <p class="text-success"><b>Para saber mais sobre este empreendimento entre em contato agora com nossos
+                    corretores.</b></p>
             <div class="mb-3">
                 <label for="exampleFormControlInput1" class="form-label">Email</label>
                 <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="nome@exemplo.com">
@@ -207,7 +213,7 @@
 
     <footer>
 
-        <p class="text-center"> &copy;  2024 Vale Imobiliária</p>
+        <p class="text-center"> &copy; 2024 Vale Imobiliária</p>
 
     </footer>
 
