--- a/QUEMSOMOS.HTML
+++ b/QUEMSOMOS.HTML
@@ -352,7 +352,7 @@
   
     <footer>
   
-      <p>&copy; 2024 Catatau Games. Feito por Vitória e Sandyla.</p>
+      <p class="text-center"> &copy;  2024 Vale Imobiliária</p>
   
     </footer>
   
