--- a/TODOSEMPREE.HTML
+++ b/TODOSEMPREE.HTML
@@ -937,7 +937,7 @@
 
     <footer>
 
-        <p>&copy; 2024 Valer Imobiliária</p>
+        <p class="text-center"> &copy;  2024 Vale Imobiliária</p>
 
     </footer>
 
