--- a/TheOffice.html
+++ b/TheOffice.html
@@ -147,7 +147,12 @@
                 </button>
             </div>
 
-            <p class="card-text">Se interesse</p>
+            <p class="fs-5"><b>Salas e lojas no Horto</b></p>
+            <p class="fw-bold">Descrição do imóvel</p>
+            <p class="card-text">Para você que nunca mediu esforços para conquistar os seus sonhos, temos o prazer de apresentar-lhes: The Office!
+                Um exclusivo empreendimento de salas comercias no bairro Horto em Ipatinga/MG, uma das localizações mais rentáveis da cidade.</p>
+            <p class="text-success"><b>Para saber mais sobre este empreendimento entre em contato agora com nossos
+                    corretores.</b></p>
             <div class="mb-3">
                 <label for="exampleFormControlInput1" class="form-label">Email</label>
                 <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="nome@exemplo.com">
@@ -169,7 +174,7 @@
 
     <footer>
 
-        <p>&copy; 2024 Catatau Games. Feito por Vitória e Sandyla.</p>
+        <p class="text-center"> &copy;  2024 Vale Imobiliária</p>
 
     </footer>
 
