--- a/VilaMineira.html
+++ b/VilaMineira.html
@@ -170,8 +170,7 @@
 
     <footer>
 
-        <p>&copy; 2024 Vale Imobiliária</p>
-
+        <p class="text-center"> &copy;  2024 Vale Imobiliária</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
