--- a/Vinhedo.html
+++ b/Vinhedo.html
@@ -148,7 +148,15 @@
                 </button>
             </div>
 
-            <p class="card-text">Se interesse</p>
+            <p class="fs-5"><b>26 andares no Cidade Nobre</b></p>
+            <p class="fw-bold">Descrição do imóvel</p>
+            <p class="card-text">Um novo conceito de morar bem. Conheça de perto o seu novo lar.
+                Morar no Cidade Nobre significa bem mais do que estar cercado de tudo que você precisa, significa Viver
+                com Qualidade.
+                Todos os detalhes pensados para proporcionar mais conforto, praticidade e privacidade para você e sua
+                família.</p>
+            <p class="text-success"><b>Para saber mais sobre este empreendimento entre em contato agora com nossos
+                    corretores.</b></p>
             <div class="mb-3">
                 <label for="exampleFormControlInput1" class="form-label">Email</label>
                 <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="nome@exemplo.com">
@@ -170,7 +178,7 @@
 
     <footer>
 
-        <p>&copy; 2024 Vale Imobiliária</p>
+        <p class="text-center"> &copy; 2024 Vale Imobiliária</p>
 
     </footer>
 
