--- a/bomretirotower.html
+++ b/bomretirotower.html
@@ -220,7 +220,14 @@
                 </button>
             </div>
 
-            <p class="card-text">Se interesse</p>
+            <p class="fs-5"><b>Perto de tudo, longe de nada</b></p>
+            <p class="fw-bold">Descrição do imóvel</p>
+            <p class="card-text">O Edifício Bom Retiro Tower é o mais novo lançamento WR Construtora, localizado perto
+                de tudo e longe de nada. São mais de 1.000 m² de área de lazer premium, além de toda a comodidade
+                residencial e comercial entre os bairros Horto, Imbaúbas, Bom Retiro e Bela Vista.
+            </p>
+            <p class="text-success"><b>Para saber mais sobre este empreendimento entre em contato agora com nossos
+                    corretores.</b></p>
             <div class="mb-3">
                 <label for="exampleFormControlInput1" class="form-label">Email</label>
                 <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="nome@exemplo.com">
@@ -242,7 +249,7 @@
 
     <footer>
 
-        <p class="text-center"> &copy;  2024 Vale Imobiliária</p>
+        <p class="text-center"> &copy; 2024 Vale Imobiliária</p>
 
     </footer>
 
