--- a/vistadamata.html
+++ b/vistadamata.html
@@ -290,7 +290,13 @@
                 </button>
             </div>
 
-            <p class="card-text">Se interesse</p>
+            <p class="fs-5"><b>Vista da Mata, nosso verde tem mais valor.</b></p>
+            <p class="fw-bold">Descrição do imóvel</p>
+            <p class="card-text">Um refúgio urbano que conecta você à natureza e traz a melhor proposta de investimento
+                do Leste de Minas Gerais.
+            </p>
+            <p class="text-success"><b>Para saber mais sobre este empreendimento entre em contato agora com nossos
+                    corretores.</b></p>
             <div class="mb-3">
                 <label for="exampleFormControlInput1" class="form-label">Email</label>
                 <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="nome@exemplo.com">
@@ -312,7 +318,7 @@
 
     <footer>
 
-        <p>&copy; 2024 Vale Imobiliária</p>
+        <p class="text-center"> &copy; 2024 Vale Imobiliária</p>
 
     </footer>
 
