--- a/voluto.html
+++ b/voluto.html
@@ -23,7 +23,7 @@
                 <nav class="navbar navbar-expand-lg navbar-re bg-red">
                     <img src="IMG/VALE IMOBILIÁ.png" alt="" width="200" height="180">
                 </nav>
-                <a class="navbar-brand" href="index.html">Vale Imobilária</a>
+                <a class="navbar-brand" href="Intex.html">Vale Imobilária</a>
                 <!--Button-->
                 <!-- Button para alternar o menu em dispositivos móveis -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -250,7 +250,19 @@
                 </button>
             </div>
 
-            <p class="card-text">Se interesse</p>
+            <p class="fs-5"><b>Chama a atenção</b></p>
+            <p class="fw-bold">Descrição do imóvel</p>
+            <p class="card-text">Conheça o Voluto, o nosso mais novo lançamento! O padrão WR com lazer premium no
+                coração de Governador Valadares. Com uma arquitetura contemporânea onde o design e a sofisticação se
+                mesclam com a praticidade e comodidade da vida urbana dinâmica em uma localização privilegiada, seus
+                detalhes únicos chamam a atenção.
+
+                A área de lazer premium do Voluto é um espetáculo à parte. Piscina, espaço gourmet, academia equipada,
+                salão de festas, espaço kids, coworking e hall decorado foram pensados para proporcionar uma experiência
+                de moradia completa. Cada detalhe planejado para garantir praticidade e qualidade de vida no dia a dia.
+            </p>
+            <p class="text-success"><b>Para saber mais sobre este empreendimento entre em contato agora com nossos corretores.</b>
+            </p>
             <div class="mb-3">
                 <label for="exampleFormControlInput1" class="form-label">Email</label>
                 <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="nome@exemplo.com">
@@ -272,7 +284,7 @@
 
     <footer>
 
-        <p>&copy; 2024 Vale Imobiliária</p>
+        <p class="text-center"> &copy; 2024 Vale Imobiliária</p>
 
     </footer>
 
