--- a/Copenhagem.html
+++ b/Copenhagem.html
@@ -205,7 +205,13 @@
                 </button>
             </div>
 
-            <p class="card-text">Se interesse</p>
+            <p class="fs-5"><b>Lazer completo no Esplanada</b></p>
+            <p class="fw-bold">Descrição do imóvel</p>
+            <p class="card-text">O novo ícone de sofisticação na melhor localização da cidade, com 26 andares e de
+                frente para a Ibituruna..
+            </p>
+            <p class="text-success"><b>Para saber mais sobre este empreendimento entre em contato agora com nossos
+                    corretores.</b></p>
             <div class="mb-3">
                 <label for="exampleFormControlInput1" class="form-label">Email</label>
                 <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="nome@exemplo.com">
@@ -227,7 +233,7 @@
 
     <footer>
 
-        <p class="text-center"> &copy;  2024 Vale Imobiliária</p>
+        <p class="text-center"> &copy; 2024 Vale Imobiliária</p>
 
     </footer>
 
