--- a/Noronha1100.html
+++ b/Noronha1100.html
@@ -148,7 +148,12 @@
                 </button>
             </div>
 
-            <p class="card-text">Se interesse</p>
+            <p class="fs-5"><b>2 quartos no Bom Retiro</b></p>
+            <p class="fw-bold">Descrição do imóvel</p>
+            <p class="card-text">Planejado para proporcionar mais conforto, praticidade e privacidade para sua família.
+            </p>
+            <p class="text-success"><b>Para saber mais sobre este empreendimento entre em contato agora com nossos
+                    corretores.</b></p>
             <div class="mb-3">
                 <label for="exampleFormControlInput1" class="form-label">Email</label>
                 <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="nome@exemplo.com">
@@ -170,7 +175,7 @@
 
     <footer>
 
-        <p class="text-center"> &copy;  2024 Vale Imobiliária</p>
+        <p class="text-center"> &copy; 2024 Vale Imobiliária</p>
 
     </footer>
 
