--- a/RESIDENCIAL.HTML
+++ b/RESIDENCIAL.HTML
@@ -744,7 +744,7 @@
 
   <footer>
 
-    <p>&copy; 2024 Catatau Games. Feito por Vitória e Sandyla.</p>
+    <p class="text-center"> &copy;  2024 Vale Imobiliária</p>
 
   </footer>
 
