--- a/TODOSIMOVEIS.HTML
+++ b/TODOSIMOVEIS.HTML
@@ -361,7 +361,7 @@
 
     <footer>
 
-        <p>&copy; 2024 Vale Imobiliária</p>
+        <p class="text-center"> &copy;  2024 Vale Imobiliária</p>
 
     </footer>
 
