--- a/Unique.html
+++ b/Unique.html
@@ -230,7 +230,14 @@
                 </button>
             </div>
 
-            <p class="card-text">Se interesse</p>
+            <p class="fs-5"><b>1 por andar no Horto</b></p>
+            <p class="fw-bold">Descrição do imóvel</p>
+            <p class="card-text">3 quartos suítes
+                2 e 3 vagas de garagem
+                15 pavimentos
+                1 Cobertura com 2 pavimentos</p>
+            <p class="text-success"><b>Para saber mais sobre este empreendimento entre em contato agora com nossos
+                    corretores.</b></p>
             <div class="mb-3">
                 <label for="exampleFormControlInput1" class="form-label">Email</label>
                 <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="nome@exemplo.com">
@@ -252,7 +259,7 @@
 
     <footer>
 
-        <p>&copy; 2024 Vale Imobiliária</p>
+        <p class="text-center"> &copy; 2024 Vale Imobiliária</p>
 
     </footer>
 
