--- a/VistaNobre.html
+++ b/VistaNobre.html
@@ -210,7 +210,11 @@
                 </button>
             </div>
 
-            <p class="card-text">Se interesse</p>
+            <p class="fs-5"><b>23 andares no Iguaçu</b></p>
+            <p class="fw-bold">Descrição do imóvel</p>
+            <p class="card-text">A melhor localização do Iguaçu com todas as vantagens do Cid. Nobre. Supermercados, McDonalds, escolas, clube, bancos, restaurantes e muito mais. Seja para morar ou investir com o Vista Nobre você faz um excelente negócio.</p>
+            <p class="text-success"><b>Para saber mais sobre este empreendimento entre em contato agora com nossos
+                    corretores.</b></p>
             <div class="mb-3">
                 <label for="exampleFormControlInput1" class="form-label">Email</label>
                 <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="nome@exemplo.com">
@@ -232,7 +236,7 @@
 
     <footer>
 
-        <p>&copy; 2024 Vale Imobiliária</p>
+        <p class="text-center"> &copy;  2024 Vale Imobiliária</p>
 
     </footer>
 
