--- a/ENTREGUE.HTML
+++ b/ENTREGUE.HTML
@@ -23,7 +23,7 @@
           <nav class="navbar navbar-expand-lg navbar-re bg-red">
               <img src="IMG/VALE IMOBILIÁ.png" alt="#" width="200" height="180">
           </nav>
-        <a class="navbar-brand" href="index.html">Vale Imobilária</a>
+        <a class="navbar-brand" href="Intex.html">Vale Imobilária</a>
         <!--Button-->
         <!-- Button para alternar o menu em dispositivos móveis -->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -59,7 +59,7 @@
                   <ul class="dropdown-menu" aria-labelledby="navbarDropdown1">
                     <li><a class="dropdown-item" href="TODOSIMOVEIS.HTML">TODOS</a></li>
                     <li><a class="dropdown-item" href="LANCAMENTO.HTML">LANÇAMENTO</a></li>
-                    <li><a class="dropdown-item" href="CONSTRUÇÃO.HTML">CONSTRUÇÃO
+                    <li><a class="dropdown-item" href="CONSTRUCAO.HTML">CONSTRUÇÃO
                     </li>
                     <li><a class="dropdown-item" href="ENTREGUE.HTML">ENTREGUE
                     </li>
