--- a/Noronha1100.html
+++ b/Noronha1100.html
@@ -23,7 +23,7 @@
                 <nav class="navbar navbar-expand-lg navbar-re bg-red">
                     <img src="IMG/VALE IMOBILIÁ.png" alt="" width="200" height="180">
                 </nav>
-                <a class="navbar-brand" href="index.html">Noronha 1100</a>
+                <a class="navbar-brand" href="Intex.html">Noronha 1100</a>
                 <!--Button-->
                 <!-- Button para alternar o menu em dispositivos móveis -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -60,7 +60,7 @@
                                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown1">
                                         <li><a class="dropdown-item" href="TODOSIMOVEIS.HTML">TODOS</a></li>
                                         <li><a class="dropdown-item" href="LANCAMENTO.HTML">LANÇAMENTO</a></li>
-                                        <li><a class="dropdown-item" href="CONSTRUÇÃO.HTML">CONSTRUÇÃO
+                                        <li><a class="dropdown-item" href="CONSTRUCAO.HTML">CONSTRUÇÃO
                                         </li>
                                         <li><a class="dropdown-item" href="ENTREGUE.HTML">ENTREGUE
                                         </li>
@@ -122,7 +122,7 @@
     <main>
 
         <section id="produtos" class="container">
-            <h2 class="text-center mb-4 title-site">Voluto</h2>
+            <h2 class="text-center mb-4 title-site">Noronha 1100</h2>
 
             <div id="carouselExampleIndicators" class="carousel slide">
                 <div class="carousel-indicators">
