--- a/Iguacunobre1.html
+++ b/Iguacunobre1.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8"> <!-- Permitir utilizar caracter especial como 'ç'-->
-    <title>Iguaçu Nobre II</title>
+    <title>Iguaçu Nobre</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -122,7 +122,7 @@
     <main>
 
         <section id="produtos" class="container">
-            <h2 class="text-center mb-4 title-site">Iguaçu Nobre II</h2>
+            <h2 class="text-center mb-4 title-site">Iguaçu Nobre</h2>
 
             <div id="carouselExampleIndicators" class="carousel slide">
                 <div class="carousel-indicators">
