--- a/LaVista.html
+++ b/LaVista.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8"> <!-- Permitir utilizar caracter especial como 'ç'-->
-    <title>Voluto</title>
+    <title>La Vista</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -23,7 +23,7 @@
                 <nav class="navbar navbar-expand-lg navbar-re bg-red">
                     <img src="IMG/VALE IMOBILIÁ.png" alt="" width="200" height="180">
                 </nav>
-                <a class="navbar-brand" href="index.html">Vale Imobilária</a>
+                <a class="navbar-brand" href="Intex.html">Vale Imobilária</a>
                 <!--Button-->
                 <!-- Button para alternar o menu em dispositivos móveis -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -60,7 +60,7 @@
                                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown1">
                                         <li><a class="dropdown-item" href="TODOSIMOVEIS.HTML">TODOS</a></li>
                                         <li><a class="dropdown-item" href="LANCAMENTO.HTML">LANÇAMENTO</a></li>
-                                        <li><a class="dropdown-item" href="CONSTRUÇÃO.HTML">CONSTRUÇÃO
+                                        <li><a class="dropdown-item" href="CONSTRUCAO.HTML">CONSTRUÇÃO
                                         </li>
                                         <li><a class="dropdown-item" href="ENTREGUE.HTML">ENTREGUE
                                         </li>
@@ -122,7 +122,7 @@
     <main>
 
         <section id="produtos" class="container">
-            <h2 class="text-center mb-4 title-site">Voluto</h2>
+            <h2 class="text-center mb-4 title-site">La Vista</h2>
 
             <div id="carouselExampleIndicators" class="carousel slide">
                 <div class="carousel-indicators">
