--- a/CONSTRUCAO.HTML
+++ b/CONSTRUCAO.HTML
@@ -23,7 +23,7 @@
         <nav class="navbar navbar-expand-lg navbar-re bg-red">
           <img src="img/VALE IMOBILIÁ.png" alt="Catatau Games" width="200" height="180">
         </nav>
-        <a class="navbar-brand" href="index.html">Vale Imobilária</a>
+        <a class="navbar-brand" href="Intex.html">Vale Imobilária</a>
         <!--Button-->
         <!-- Button para alternar o menu em dispositivos móveis -->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -34,12 +34,12 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1" role="button" data-bs-toggle="dropdown"
-                aria-expanded="false">
+              <a class="nav-link dropdown-toggle" href="QUEMSOMOS.HTML" id="navbarDropdown1" role="button"
+                data-bs-toggle="dropdown" aria-expanded="false">
                 QUEM SOMOS
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown1">
-                <li><a class="dropdown-item" href="#">CÓDIGO DE CONDUTA</a></li>
+                <li><a class="dropdown-item" href="QUEMSOMOS.HTML">QUEM SOMOS</a></li>
               </ul>
             </li>
             <!-- Outros menus de navegação -->
