--- a/TODOSIMOVEIS.HTML
+++ b/TODOSIMOVEIS.HTML
@@ -34,12 +34,12 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1" role="button"
+                            <a class="nav-link dropdown-toggle" href="QUEMSOMOS.HTML" id="navbarDropdown1" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
                                 QUEM SOMOS
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown1">
-                                <li><a class="dropdown-item" href="#">CÓDIGO DE CONDUTA</a></li>
+                                <li><a class="dropdown-item" href="QUEMSOMOS.HTML">QUEM SOMOS</a></li>
                             </ul>
                         </li>
                         <!-- Outros menus de navegação -->
@@ -152,12 +152,12 @@
                             <h5 class="card-title">Vista da Mata</h5>
                             <p class="card-text"><b>Ipatinga</b></p>
                             <p class="card-text"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                                        fill="currentColor" class="bi bi-pin-map-fill" viewBox="0 0 16 16">
-                                        <path fill-rule="evenodd"
-                                            d="M3.1 11.2a.5.5 0 0 1 .4-.2H6a.5.5 0 0 1 0 1H3.75L1.5 15h13l-2.25-3H10a.5.5 0 0 1 0-1h2.5a.5.5 0 0 1 .4.2l3 4a.5.5 0 0 1-.4.8H.5a.5.5 0 0 1-.4-.8z" />
-                                        <path fill-rule="evenodd"
-                                            d="M4 4a4 4 0 1 1 4.5 3.969V13.5a.5.5 0 0 1-1 0V7.97A4 4 0 0 1 4 3.999z" />
-                                    </svg>Bela Vista</p>
+                                    fill="currentColor" class="bi bi-pin-map-fill" viewBox="0 0 16 16">
+                                    <path fill-rule="evenodd"
+                                        d="M3.1 11.2a.5.5 0 0 1 .4-.2H6a.5.5 0 0 1 0 1H3.75L1.5 15h13l-2.25-3H10a.5.5 0 0 1 0-1h2.5a.5.5 0 0 1 .4.2l3 4a.5.5 0 0 1-.4.8H.5a.5.5 0 0 1-.4-.8z" />
+                                    <path fill-rule="evenodd"
+                                        d="M4 4a4 4 0 1 1 4.5 3.969V13.5a.5.5 0 0 1-1 0V7.97A4 4 0 0 1 4 3.999z" />
+                                </svg>Bela Vista</p>
                             <p class="card-text"><i class="bi bi-usb-mini-fill"></i> 2 Quartos</p>
                             <p class="card-text"><i class="bi bi-coin"></i> A partir de R$ 1.081.200,00</p>
                             <a class="btn btn-light" href="vistadamata.html" role="button">Veja mais</a>
@@ -171,12 +171,12 @@
                             <h5 class="card-title">Bom Retiro Tower</h5>
                             <p class="card-text"><b>Ipatinga</b></p>
                             <p class="card-text"></p><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                                        fill="currentColor" class="bi bi-pin-map-fill" viewBox="0 0 16 16">
-                                        <path fill-rule="evenodd"
-                                            d="M3.1 11.2a.5.5 0 0 1 .4-.2H6a.5.5 0 0 1 0 1H3.75L1.5 15h13l-2.25-3H10a.5.5 0 0 1 0-1h2.5a.5.5 0 0 1 .4.2l3 4a.5.5 0 0 1-.4.8H.5a.5.5 0 0 1-.4-.8z" />
-                                        <path fill-rule="evenodd"
-                                            d="M4 4a4 4 0 1 1 4.5 3.969V13.5a.5.5 0 0 1-1 0V7.97A4 4 0 0 1 4 3.999z" />
-                                    </svg>Bom Retiro</p>
+                                fill="currentColor" class="bi bi-pin-map-fill" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd"
+                                    d="M3.1 11.2a.5.5 0 0 1 .4-.2H6a.5.5 0 0 1 0 1H3.75L1.5 15h13l-2.25-3H10a.5.5 0 0 1 0-1h2.5a.5.5 0 0 1 .4.2l3 4a.5.5 0 0 1-.4.8H.5a.5.5 0 0 1-.4-.8z" />
+                                <path fill-rule="evenodd"
+                                    d="M4 4a4 4 0 1 1 4.5 3.969V13.5a.5.5 0 0 1-1 0V7.97A4 4 0 0 1 4 3.999z" />
+                            </svg>Bom Retiro</p>
                             <p class="card-text"><i class="bi bi-usb-mini-fill"></i> 2 Quartos - 1 suíte</p>
                             <p class="card-text"><i class="bi bi-coin"></i> A partir de R$ 560 mil</p>
                             <a class="btn btn-light" href="bomretirotower.html" role="button">Veja mais</a>
@@ -228,12 +228,12 @@
                             <h5 class="card-title">La Ville</h5>
                             <p class="card-text"><b>Gov. Valadares</b></p>
                             <p class="card-text"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                                        fill="currentColor" class="bi bi-pin-map-fill" viewBox="0 0 16 16">
-                                        <path fill-rule="evenodd"
-                                            d="M3.1 11.2a.5.5 0 0 1 .4-.2H6a.5.5 0 0 1 0 1H3.75L1.5 15h13l-2.25-3H10a.5.5 0 0 1 0-1h2.5a.5.5 0 0 1 .4.2l3 4a.5.5 0 0 1-.4.8H.5a.5.5 0 0 1-.4-.8z" />
-                                        <path fill-rule="evenodd"
-                                            d="M4 4a4 4 0 1 1 4.5 3.969V13.5a.5.5 0 0 1-1 0V7.97A4 4 0 0 1 4 3.999z" />
-                                    </svg>Em frente ao GV Shopping</p>
+                                    fill="currentColor" class="bi bi-pin-map-fill" viewBox="0 0 16 16">
+                                    <path fill-rule="evenodd"
+                                        d="M3.1 11.2a.5.5 0 0 1 .4-.2H6a.5.5 0 0 1 0 1H3.75L1.5 15h13l-2.25-3H10a.5.5 0 0 1 0-1h2.5a.5.5 0 0 1 .4.2l3 4a.5.5 0 0 1-.4.8H.5a.5.5 0 0 1-.4-.8z" />
+                                    <path fill-rule="evenodd"
+                                        d="M4 4a4 4 0 1 1 4.5 3.969V13.5a.5.5 0 0 1-1 0V7.97A4 4 0 0 1 4 3.999z" />
+                                </svg>Em frente ao GV Shopping</p>
                             <p class="card-text"><i class="bi bi-usb-mini-fill"></i> 3 Quartos</p>
                             <p class="card-text"><i class="bi bi-coin"></i> A partir de R$ 820 mil</p>
                             <a class="btn btn-light" href="LaVille.html" role="button">Veja mais</a>
@@ -361,7 +361,7 @@
 
     <footer>
 
-        <p class="text-center"> &copy;  2024 Vale Imobiliária</p>
+        <p class="text-center"> &copy; 2024 Vale Imobiliária</p>
 
     </footer>
 
