--- a/TheOffice.html
+++ b/TheOffice.html
@@ -34,12 +34,12 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1" role="button"
+                            <a class="nav-link dropdown-toggle" href="QUEMSOMOS.HTML" id="navbarDropdown1" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
                                 QUEM SOMOS
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown1">
-                                <li><a class="dropdown-item" href="#">CÓDIGO DE CONDUTA</a></li>
+                                <li><a class="dropdown-item" href="QUEMSOMOS.HTML">QUEM SOMOS</a></li>
                             </ul>
                         </li>
                         <!-- Outros menus de navegação -->
@@ -129,40 +129,43 @@
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
                         class="active" aria-current="true" aria-label="Slide 1"></button>
 
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="IMG/to01.png" class="d-block w-100" alt="IMG/mp01">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="IMG/to01.png" class="d-block w-100" alt="IMG/mp01">
+                        </div>
                     </div>
+
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
                 </div>
 
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
-            </div>
+                <p class="fs-5"><b>Salas e lojas no Horto</b></p>
+                <p class="fw-bold">Descrição do imóvel</p>
+                <p class="card-text">Para você que nunca mediu esforços para conquistar os seus sonhos, temos o prazer
+                    de apresentar-lhes: The Office!
+                    Um exclusivo empreendimento de salas comercias no bairro Horto em Ipatinga/MG, uma das localizações
+                    mais rentáveis da cidade.</p>
+                <p class="text-success"><b>Para saber mais sobre este empreendimento entre em contato agora com nossos
+                        corretores.</b></p>
+                <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label">Email</label>
+                    <input type="email" class="form-control" id="exampleFormControlInput1"
+                        placeholder="nome@exemplo.com">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleFormControlTextarea1" class="form-label">Texto</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
 
-            <p class="fs-5"><b>Salas e lojas no Horto</b></p>
-            <p class="fw-bold">Descrição do imóvel</p>
-            <p class="card-text">Para você que nunca mediu esforços para conquistar os seus sonhos, temos o prazer de apresentar-lhes: The Office!
-                Um exclusivo empreendimento de salas comercias no bairro Horto em Ipatinga/MG, uma das localizações mais rentáveis da cidade.</p>
-            <p class="text-success"><b>Para saber mais sobre este empreendimento entre em contato agora com nossos
-                    corretores.</b></p>
-            <div class="mb-3">
-                <label for="exampleFormControlInput1" class="form-label">Email</label>
-                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="nome@exemplo.com">
-            </div>
-            <div class="mb-3">
-                <label for="exampleFormControlTextarea1" class="form-label">Texto</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-
-            </div>
-            <button type="button" class="btn btn-primary">Enviar</button>
+                </div>
+                <button type="button" class="btn btn-primary">Enviar</button>
 
         </section>
 
@@ -174,7 +177,7 @@
 
     <footer>
 
-        <p class="text-center"> &copy;  2024 Vale Imobiliária</p>
+        <p class="text-center"> &copy; 2024 Vale Imobiliária</p>
 
     </footer>
 
