--- a/Absoluto.html
+++ b/Absoluto.html
@@ -34,12 +34,12 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1" role="button"
+                            <a class="nav-link dropdown-toggle" href="QUEMSOMOS.HTML" id="navbarDropdown1" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
                                 QUEM SOMOS
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown1">
-                                <li><a class="dropdown-item" href="#">CÓDIGO DE CONDUTA</a></li>
+                                <li><a class="dropdown-item" href="QUEMSOMOS.HTML">QUEM SOMOS</a></li>
                             </ul>
                         </li>
                         <!-- Outros menus de navegação -->
@@ -150,7 +150,8 @@
 
             <p class="fs-5"><b>3 e 4 Suítes em Valadares</b></p>
             <p class="fw-bold">Descrição do imóvel</p>
-            <p class="card-text">O novo ícone de sofisticação na melhor localização da cidade, com 25 andares e de frente para a Ibituruna..</p>
+            <p class="card-text">O novo ícone de sofisticação na melhor localização da cidade, com 25 andares e de
+                frente para a Ibituruna..</p>
             <p class="text-success"><b>Para saber mais sobre este empreendimento entre em contato agora com nossos
                     corretores.</b></p>
             <div class="mb-3">
