--- a/Altavista.html
+++ b/Altavista.html
@@ -34,12 +34,12 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1" role="button"
+                            <a class="nav-link dropdown-toggle" href="QUEMSOMOS.HTML" id="navbarDropdown1" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
                                 QUEM SOMOS
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown1">
-                                <li><a class="dropdown-item" href="#">CÓDIGO DE CONDUTA</a></li>
+                                <li><a class="dropdown-item" href="QUEMSOMOS.HTML">QUEM SOMOS</a></li>
                             </ul>
                         </li>
                         <!-- Outros menus de navegação -->
@@ -128,7 +128,7 @@
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
                         class="active" aria-current="true" aria-label="Slide 1"></button>
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
                         class="active" aria-current="true" aria-label="Slide 1"></button>
                 </div>
 
@@ -175,7 +175,7 @@
 
     <footer>
 
-        <p class="text-center"> &copy;  2024 Vale Imobiliária</p>
+        <p class="text-center"> &copy; 2024 Vale Imobiliária</p>
 
     </footer>
 
