--- a/ENTREGUE.HTML
+++ b/ENTREGUE.HTML
@@ -6,9 +6,9 @@
   <title>ENTREGUE</title>
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="css/style.css"> <!-- Precisa existir a comunicação entre o arquivo CSS -->
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <link rel="stylesheet" href="css/style.css"> <!-- Precisa existir a comunicação entre o arquivo CSS -->
 
 
 
@@ -20,9 +20,9 @@
     <!-- Início do menu -->
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container">
-          <nav class="navbar navbar-expand-lg navbar-re bg-red">
-              <img src="IMG/VALE IMOBILIÁ.png" alt="#" width="200" height="180">
-          </nav>
+        <nav class="navbar navbar-expand-lg navbar-re bg-red">
+          <img src="IMG/VALE IMOBILIÁ.png" alt="#" width="200" height="180">
+        </nav>
         <a class="navbar-brand" href="Intex.html">Vale Imobilária</a>
         <!--Button-->
         <!-- Button para alternar o menu em dispositivos móveis -->
@@ -34,12 +34,12 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1" role="button" data-bs-toggle="dropdown"
-                aria-expanded="false">
+              <a class="nav-link dropdown-toggle" href="QUEMSOMOS.HTML" id="navbarDropdown1" role="button"
+                data-bs-toggle="dropdown" aria-expanded="false">
                 QUEM SOMOS
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown1">
-                <li><a class="dropdown-item" href="#">CÓDIGO DE CONDUTA</a></li>
+                <li><a class="dropdown-item" href="QUEMSOMOS.HTML">QUEM SOMOS</a></li>
               </ul>
             </li>
             <!-- Outros menus de navegação -->
@@ -206,7 +206,7 @@
   <footer>
     <!-- Rodapé -->
 
-    <p class="text-center"> &copy;  2024 Vale Imobiliária</p>
+    <p class="text-center"> &copy; 2024 Vale Imobiliária</p>
 
   </footer>
 
