--- a/VistaNobre.html
+++ b/VistaNobre.html
@@ -34,12 +34,12 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1" role="button"
+                            <a class="nav-link dropdown-toggle" href="QUEMSOMOS.HTML" id="navbarDropdown1" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
                                 QUEM SOMOS
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown1">
-                                <li><a class="dropdown-item" href="#">CÓDIGO DE CONDUTA</a></li>
+                                <li><a class="dropdown-item" href="QUEMSOMOS.HTML">QUEM SOMOS</a></li>
                             </ul>
                         </li>
                         <!-- Outros menus de navegação -->
@@ -212,7 +212,9 @@
 
             <p class="fs-5"><b>23 andares no Iguaçu</b></p>
             <p class="fw-bold">Descrição do imóvel</p>
-            <p class="card-text">A melhor localização do Iguaçu com todas as vantagens do Cid. Nobre. Supermercados, McDonalds, escolas, clube, bancos, restaurantes e muito mais. Seja para morar ou investir com o Vista Nobre você faz um excelente negócio.</p>
+            <p class="card-text">A melhor localização do Iguaçu com todas as vantagens do Cid. Nobre. Supermercados,
+                McDonalds, escolas, clube, bancos, restaurantes e muito mais. Seja para morar ou investir com o Vista
+                Nobre você faz um excelente negócio.</p>
             <p class="text-success"><b>Para saber mais sobre este empreendimento entre em contato agora com nossos
                     corretores.</b></p>
             <div class="mb-3">
@@ -236,7 +238,7 @@
 
     <footer>
 
-        <p class="text-center"> &copy;  2024 Vale Imobiliária</p>
+        <p class="text-center"> &copy; 2024 Vale Imobiliária</p>
 
     </footer>
 
