--- a/voluto.html
+++ b/voluto.html
@@ -34,12 +34,12 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1" role="button"
+                            <a class="nav-link dropdown-toggle" href="QUEMSOMOS.HTML" id="navbarDropdown1" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
                                 QUEM SOMOS
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown1">
-                                <li><a class="dropdown-item" href="#">CÓDIGO DE CONDUTA</a></li>
+                                <li><a class="dropdown-item" href="QUEMSOMOS.HTML">QUEM SOMOS</a></li>
                             </ul>
                         </li>
                         <!-- Outros menus de navegação -->
@@ -261,7 +261,8 @@
                 salão de festas, espaço kids, coworking e hall decorado foram pensados para proporcionar uma experiência
                 de moradia completa. Cada detalhe planejado para garantir praticidade e qualidade de vida no dia a dia.
             </p>
-            <p class="text-success"><b>Para saber mais sobre este empreendimento entre em contato agora com nossos corretores.</b>
+            <p class="text-success"><b>Para saber mais sobre este empreendimento entre em contato agora com nossos
+                    corretores.</b>
             </p>
             <div class="mb-3">
                 <label for="exampleFormControlInput1" class="form-label">Email</label>
