--- a/Noronha1100.html
+++ b/Noronha1100.html
@@ -23,7 +23,7 @@
                 <nav class="navbar navbar-expand-lg navbar-re bg-red">
                     <img src="IMG/VALE IMOBILIÁ.png" alt="" width="200" height="180">
                 </nav>
-                <a class="navbar-brand" href="Intex.html">Noronha 1100</a>
+                <a class="navbar-brand" href="Index.html">Noronha 1100</a>
                 <!--Button-->
                 <!-- Button para alternar o menu em dispositivos móveis -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
