--- a/TODOSEMPREE.HTML
+++ b/TODOSEMPREE.HTML
@@ -23,7 +23,7 @@
                 <nav class="navbar navbar-expand-lg navbar-re bg-red">
                     <img src="img/VALE IMOBILIÁ.png" alt="Catatau Games" width="200" height="180">
                 </nav>
-                <a class="navbar-brand" href="Intex.html">Vale Imobilária</a>
+                <a class="navbar-brand" href="Index.html">Vale Imobilária</a>
                 <!--Button-->
                 <!-- Button para alternar o menu em dispositivos móveis -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
